# bcode

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
bcode/: __init__.py  audit.py  cli.py  context.py  git.py  report.py  transcript.py
bcode/detectors/: base.py  breakfix.py  imports.py  scope.py  validation.py
docs/: pypi-trusted-publishing.md
docs/superpowers/plans/: 2026-05-18-bcode-phase1.md
docs/superpowers/specs/: 2026-05-18-bcode-design.md
tests/: test_audit.py  test_breakfix.py  test_cli.py  test_git.py  test_imports.py  test_report.py  test_scope.py  test_transcript.py  test_validation.py
tests/fixtures/diffs/: clean.diff  hallucinated_import.diff  local_module_import.diff  multi_file.diff
tests/fixtures/manifests/: package.json  requirements.txt
tests/fixtures/transcripts/: false_success.json  no_transcript.json  ran_all.json  skipped_tests.json
