[project]
name = "bcode"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "tomllib; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
bcode = "bcode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["bcode"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
